<resources>
    <string name="app_name">途虎养车</string>
    <string name="apk_name">TuHu_android.apk</string>
    <string name="cancel">取消</string>
    <string name="q_a">分类</string>
    <string name="fuwumendian">门店</string>
    <string name="year_adapter">年款适配</string>
    <string name="how_engine_discharge">确定发动机排量</string>
    <string name="how_car_years">确定生产年份</string>
    <string name="how_engine_model">确定发动机型号</string>
    <string name="oks">确认</string>
    <string name="main_home">首页</string>
    <string name="main_center">我的</string>
    <string name="main_find">发现</string>
    <string name="order_info">订单详情</string>
    <string name="yuyuemendian">预约安装门店</string>
    <string name="main_set">设置</string>
    <string name="save">保存</string>
    <string name="beijing">北京</string>
    <string name="produte_detail">商品详情</string>
    <string name="mouth">月</string>
    <string name="day">日</string>
    <string name="page_no_messages">暂无信息......</string>
    <string name="no_data">暂无数据</string>
    <string name="no_product">暂无商品</string>
    <string name="drag_down_refresh">下拉刷新</string>
    <string name="release_torefresh">松开即可刷新</string>
    <string name="laste_refrestime">最后更新:</string>
    <string name="refreshing">正在刷新......</string>
    <string name="loading">努力加载中......</string>
    <string name="loadingmore">正在加载更多......</string>
    <string name="no_loaddata">没有更多了</string>
    <string name="error_loaddata">获取数据失败,点击重试</string>
    <string name="loading_add">点击查看更多</string>
    <string name="dizhi">地址：</string>
    <string name="dzfapiaoyc">系统升级中，请选择其它类型发票</string>
    <string name="worktime">营业时间：</string>
    <string name="rengoumai">人购买</string>
    <string name="express_to">配送至:</string>
    <string name="express_to_where">配送至: %1$s</string>
    <string name="RMB">¥</string>
    <string name="take_photo">拍照</string>
    <string name="pick_photo">从相册选择</string>
    <string name="azf">安装费</string>
    <string name="youhuiquan">优惠券</string>
    <string name="mrjg">- ¥0.00</string>
    <string name="sfj">实付款</string>
    <string name="spze">商品总价</string>
    <string name="ttzffs">支付方式</string>
    <string name="goumaishuliang">购买数量</string>
    <string name="bkfp_tx">不开发票</string>
    <string name="ptfp_tx">普通发票</string>
    <string name="dingdanbiaohao">订单编号：</string>
    <string name="dzfapiaoxinxi">电子发票是税务局认可的有效凭证，其法律效力、基本用途及使用规定同纸质发票，如需纸质发票可自行下载打印</string>
    <string name="dingdanjine">订单金额：</string>
    <string name="fapiaotaitou">发票抬头</string>
    <string name="fapiaoxinxi">发票信息</string>
    <string name="ninyitijiaofapiaoxinxi">您已提交了开票信息</string>
    <string name="fapiaojichu">发票将在订单完成并且财务审核后，约7个工作日寄出。</string>
    <string name="cidingdanfapiaoyikaichu">此订单发票已开出</string>
    <string name="ganxietuhu">感谢您选择途虎，欢迎您再次光临</string>
    <string name="fapiaoyouxiaoqi">发票需要在订单完成3个月内申请开具，您已经超过有效期</string>
    <string name="shouhuorenxinxi">收货人信息</string>
    <string name="shoupiaorenfapiao">发票内容</string>
    <string name="ptfp_tx_default">抬头：单位名称/不填则为个人</string>
    <string name="qxzzffs">未选择</string>
    <string name="Lazmd">请选择安装门店</string>
    <string name="useyouhuiquan">优惠券</string>
    <string name="wukeyongyouhuiquan">无可用优惠券</string>
    <string name="azsj">安装时间</string>
    <string name="Lazsj">预约到店安装时间</string>
    <string name="weiyuyue">未预约</string>
    <string name="ddqr">订单确认</string>
    <string name="tjdd">提交订单</string>
    <string name="qrdd">确认提交</string>
    <string name="settings_feedback">问题反馈</string>
    <string name="settings_aboutus">关于途虎</string>
    <string name="evaluate">评价</string>
    <string name="overall_comment">综合评价</string>
    <string name="default_text">[默认]</string>
    <string name="favourable_Rate">好评率</string>
    <string name="rg_filter_all">综合</string>
    <string name="rg_filter_sales">销量</string>
    <string name="rg_filter_price">价格</string>
    <string name="rg_filter_text">筛选</string>
    <string name="car_info_tips">完善车型信息可以更精准的为您推荐适合的产品</string>
    <string name="gotochoose">去选择</string>
    <string name="question">如何知道轮胎规格？</string>
    <string name="question_hub">如何选择轮毂尺寸？</string>
    <string name="hub_detail_notice">如下图，轮胎侧模的规格是”205/55R17”即是轮胎规格</string>
    <string name="lt_answer">在轮胎的胎侧都模刻了此轮胎的规格。下图中，225/45R17即是轮胎规格。</string>
    <string name="answer_hub">您的原装轮毂尺寸与轮胎尺寸一致，可以根据当前的轮胎规格确定轮毂的尺寸，如195/65
    R15的轮胎适配15寸的轮毂；也可以选择升级更大尺寸的轮毂，以获得更好的驾驶操控性和更时尚的外观，升级轮毂后轮胎也需要更换。
  </string>
    <string name="pull_cra_name_label">( 车型匹配是否正确，如有不对请重新选择 )</string>
    <string name="my_youhuiquan">我的优惠券</string>
    <string name="my_xiaoxi">我的消息</string>
    <string name="car_haoma">车牌号码</string>
    <string name="car_inputhaoma">车牌号码</string>
    <string name="car_dq">沪</string>
    <string name="fapiao_tishi">如需发票，请下单后在订单详情中申请开具</string>
    <string name="add_address">增加收货人</string>
    <string name="set_address">设为默认收货人</string>
    <string name="address_tip">您的收货信息不完整，请先完善再下单。</string>
    <string name="save_next">保存并使用</string>
    <string name="gouwuliucheng">购物流程</string>
    <string name="gouwushuoming">保养项目说明</string>
    <string name="tyre_type_not_found">找不到该车辆轮胎规格</string>
    <string name="cdd">催到店</string>
    <string name="fshb">买完赚更多</string>
    <string name="luntriex">点击领取</string>
    <string name="now_pj">立即评价</string>
    <string name="now_zhuij_pj">追加评价</string>
    <string name="cancel_order">取消订单</string>
    <string name="txfh_order">提醒发货</string>
    <string name="pay_right_fuknow">立即支付</string>
    <string name="pay_right_zaicipay">再次购买</string>
    <string name="pay_right_Delliver">确认收货</string>
    <string name="service_validation_code">服务验证码:</string>
    <string name="distribution_mode">配送方式：</string>
    <string name="order_time">订单时间：</string>
    <string name="actually_payment">实付款：</string>
    <string name="effective_date">使用有效期</string>
    <string name="verification_code">服务验证码</string>
    <string name="general_use">全市合作门店通用</string>
    <string name="book_store">预约门店</string>
    <string name="order_good_count">件商品</string>
    <string name="order_good_list">商品服务清单</string>
    <string name="all_order_null">您暂无订单</string>
    <string name="wait_pay_null">您暂无待付款订单</string>
    <string name="wait_confirm_null">您暂无待收货订单</string>
    <string name="wait_install_null">您暂无待安装订单</string>
    <string name="wait_evaluate_null">您暂无待评论订单</string>
    <string name="error_net_status_is_bad">您的网络不给力，请重试！</string>
    <string name="error_net_is_not_connected">网络连接不可用,是否进行设置?</string>
    <string name="add_success">添加成功</string>
    <string name="search_tips_soso">请输入您想要的商品或服务</string>
    <string name="search">搜索</string>
    <string name="search_history_re">热门搜索</string>
    <string name="search_history_label">历史搜索</string>
    <string name="search_history_empty">没有搜索记录</string>
    <string name="search_choose_car_tips">请选择车型</string>
    <string name="search_clear_history">清空历史搜索记录</string>
    <string name="login_for_history">点击登录，查看历史搜索记录</string>
    <string name="my_express_info">订单跟踪</string>
    <string name="search_history_goods">请搜索您要的商品</string>
    <string name="login_code_success_tips">验证码已发送至您的手机，请注意查收</string>
    <string name="login_empty_phone_or_code">手机号或验证码不能为空</string>
    <string name="login_invalid_phone_num">不是有效手机号码</string>
    <string name="login_please_input_phone_num">请输入手机号码</string>
    <string name="login_please_input_valid_code">请输入正确的4位手机验证码</string>
    <string name="fix_name">此昵称非真实姓名，仅用于发现评论等场景里使用</string>
    <string name="fix_realname">请填写真实姓名，用于下单或者客服联系您核实订单信息时使用</string>
    <string name="return_order">门店是否解决了您的问题？请留下您的宝贵意见</string>
    <string name="vip1">1.网站/APP互动</string>
    <string name="need_choose_tishi1">相关信息可以在车辆铭牌上查看</string>
    <string name="need_choose_tishi2">铭牌的位置</string>
    <string name="progressActivityErrorButton">重试</string>
    <string name="progressActivityEmptyTitlePlaceholder">空的</string>
    <string name="progressActivityEmptyContentPlaceholder">这里什么也没有</string>
    <string name="progressActivityErrorTitlePlaceholder">网络错误</string>
    <string name="progressActivityErrorContentPlaceholder">不能与我们的服务器建立连接。请再试一次当你连接到互联网。</string>
    <string name="title_activity_personal_info_edit_ui">PersonalInfoEditUI</string>
    <string name="title_activity_my_collection_ui">MyCollectionUI</string>
    <string name="title_activity_clip_get">ClipImageActivity</string>
    <string name="evaluate_shop_msg">门店服务怎么样，谈谈你的感受吧！</string>
    <string name="add_evaluate_shop_msg">门店服务怎么样，谈谈你的感受吧！</string>
    <string name="add_evaluate_technician_msg">技师水平如何，门店服务怎么样，谈谈你的感受吧！</string>
    <string name="evaluate_goods_msg">产品使用的怎么样，谈谈您的感受吧！</string>
    <string name="evaluate_must_msg">您的建议很重要，请填写评价内容</string>
    <string name="title_activity_return_estimate">ReturnEstimateActivity</string>
    <string name="message_cancle_all">全部删除</string>
    <string name="message_read_all">全部设为已读</string>
    <string name="message_delete_deprecated">删除已过期</string>
    <string name="photos_num">%1$d张</string>
    <string name="msg_no_camera">没找到摄像头</string>
    <string name="msg_maxi_capacity">您只能选择9张图片</string>
    <string name="commit">确定</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="money_mark">"¥"</string>
    <string name="mall_tab_view1">积分抽奖</string>
    <string name="mall_tab_view2">积分兑换</string>
    <string name="third_coupon_title1">未过期兑换码</string>
    <string name="third_coupon_title2">已过期兑换码</string>
    <string name="third_coupon_text_null1">返回会员福利，领取更多好券</string>
    <string name="third_coupon_text_null2">您当前暂无过期兑换码</string>
    <string name="modify_phone_tip">如无法自主修改，请拨打400-111-8868咨询客服服务</string>
    <string name="zhankai">查看更多</string>
    <string name="shouqi">收起更多</string>
    <string name="prod_dialog_color">请选择颜色</string>
    <string name="prod_dialog_size">请选择尺寸</string>
    <string name="prod_dialog_store">请选择门店</string>
    <string name="prod_dialog_vehicle_fitting">正在适配车型信息</string>
    <string name="prod_dialog_vehicle_choose">请选择车型</string>
    <string name="prod_dialog_vehicle_complete">请补全车型</string>
    <string name="prod_dialog_vehicle_not_fit">该商品不适配此车型</string>
    <string name="check_more">查看更多%1$s</string>
    <string name="tag_original_equip">原配</string>
    <string name="tag_recommend">推荐</string>
    <string name="tag_hot_sale">热卖</string>
    <string name="message_unadapter_luntai">此轮胎可能与爱车不适配</string>
    <string name="recall">撤回</string>
    <string name="permissions_save_file_hint">需要存储文件的权限</string>
    <string name="permissions_access_album_hint">需要存储文件的权限以访问相册</string>
    <string name="permissions_up_photo_type2_hint">该操作需要拍照以及访问存储权限，用于扫描行驶证</string>
    <string name="permissions_up_photo_hint">该操作需要拍照以及访问存储权限，用于拍照上传图片</string>
    <string name="permissions_up_photo_type3_hint">该操作需要拍照和读取存储权限，用于获取头像</string>
    <string name="permissions_dial_call_hint">该操作需要拨打电话权限</string>
    <string name="permissions_up_photo_type4_name">拍照和读取存储权限</string>
    <string name="permissions_dial_call_name">拨打电话权限</string>
    <string name="permissions_take_photo_hint">该操作需要拍照和读写存储权限</string>
    <string name="permissions_welcome_startup_hint">为优化使用体验以及验证设备合法性，应用需要访问存储和手机标识权限</string>
    <string name="permissions_login_code_hint">发送验证码需要读取手机状态权限</string>
    <string name="permissions_login_hint">用户登录需要读取手机状态权限</string>
    <string name="permissions_read_phone_hint">读取手机状态的权限用于读取设备标识</string>
    <string name="permissions_get_city_hint">打开定位用于获取当前城市</string>
    <string name="permissions_location_hint">途虎养车需要定位权限以判断您当前所在城市</string>
    <string name="permissions_location">定位</string>
    <string name="permissions_save_file">存储文件</string>
    <string name="permissions_photograph">拍照</string>
    <string name="permissions_apply">去申请</string>
    <string name="setting">设置</string>
    <string name="start_pk">开始PK</string>
    <string name="comment_count">条图文评价</string>
    <string name="comment">评分</string>
    <string name="comment_times">条图文评价</string>
    <string name="default_like">个用户默认给了好评</string>
</resources>